--- a/index.html
+++ b/index.html
@@ -7,17 +7,31 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="">DOGCLUB</a>
-        <ul>
-          <li><a href="">Less talk</a></li>
-          <li><a href="">Services category</a></li>
-          <li><a href="">Happy customer</a></li>
-          <li><a href="">Contact</a></li>
-        </ul>
-      </nav>
-      <button type="button">Contact us</button>
+    <header class="header">
+      <div class="container">
+        <div class="header__container">
+          <nav class="header__nav">
+            <a class="header__logo" href=""
+              ><svg class="header__logo-icon" width="40" height="40">
+                <use href=""></use>
+              </svg>
+              <span class="header__logo-text"><strong>DOG</strong>CLUB</span>
+            </a>
+            <ul class="header__menu">
+              <li><a class="header__link" href="">Less talk</a></li>
+              <li><a class="header__link" href="">Services category</a></li>
+              <li><a class="header__link" href="">Happy customer</a></li>
+              <li><a class="header__link" href="">Contact</a></li>
+            </ul>
+          </nav>
+          <div class="header__contact">
+            <svg class="header__contact-icon" class="" width="40" height="40">
+              <use href=""></use>
+            </svg>
+            <button class="header__contact-button" type="button">Contact us</button>
+          </div>
+        </div>
+      </div>
     </header>
     <main>
       <section>
