--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
       <div class="container">
         <div class="header__container">
           <nav class="header__nav">
-            <a class="header__logo" href=""
-              ><svg class="header__logo-icon" width="40" height="40">
-                <use href=""></use>
-              </svg>
-              <span class="header__logo-text"><strong>DOG</strong>CLUB</span>
-            </a>
+            <div class="header__logo-container">
+              <a class="header__logo" href=""
+                ><svg class="header__logo-icon" width="43" height="43">
+                  <use href=""></use>
+                </svg>
+                <span class="header__logo-text"><strong>DOG</strong>CLUB</span>
+              </a>
+            </div>
             <ul class="header__menu">
               <li><a class="header__link" href="">Less talk</a></li>
               <li><a class="header__link" href="">Services category</a></li>
@@ -25,10 +27,12 @@
             </ul>
           </nav>
           <div class="header__contact">
-            <svg class="header__contact-icon" class="" width="40" height="40">
-              <use href=""></use>
+            <svg class="header__contact-icon" width="40" height="40">
+              <use href="/img/symbol-defs.svg#icon-teeny"></use>
             </svg>
-            <button class="header__contact-button" type="button">Contact us</button>
+            <button class="header__contact-button" type="button">
+              Contact us
+            </button>
           </div>
         </div>
       </div>
