--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
             <div class="header__logo-container">
               <a class="header__logo" href=""
                 ><svg class="header__logo-icon" width="43" height="43">
-                  <use href=""></use>
+                  <use href="./img/symbol-defs.svg#icon-Paw"></use>
                 </svg>
-                <span class="header__logo-text"><strong>DOG</strong>CLUB</span>
+                <span class="header__logo-text"
+                  ><strong class="header__logo-text-bold">DOG</strong>CLUB</span
+                >
               </a>
             </div>
             <ul class="header__menu">
