--- a/index.html
+++ b/index.html
@@ -11,16 +11,9 @@
       <div class="container">
         <div class="header__container">
           <nav class="header__nav">
-            <div class="header__logo-container">
-              <a class="header__logo" href=""
-                ><svg class="header__logo-icon" width="43" height="43">
-                  <use href="./img/symbol-defs.svg#icon-Paw"></use>
-                </svg>
-                <span class="header__logo-text"
-                  ><strong class="header__logo-text-bold">DOG</strong>CLUB</span
-                >
-              </a>
-            </div>
+            <a class="header__logo" href="">
+              <img src="./img/logo.png" alt="logo" />
+            </a>
             <ul class="header__menu">
               <li><a class="header__link" href="">Less talk</a></li>
               <li><a class="header__link" href="">Services category</a></li>
@@ -40,10 +33,16 @@
       </div>
     </header>
     <main>
-      <section>
-        <h2>Taking care for your Smart Dog!</h2>
-        <p>Human–canine bonding is the relationship between dogs and humans</p>
-        <button type="button">Explore More</button>
+      <section class="hero__section">
+        <div class="container">
+          <div class="hero__container">
+            <h1 class="hero__title">Taking care for your Smart Dog!</h1>
+            <p class="hero__text">
+              Human–canine bonding is the relationship between dogs and humans
+            </p>
+            <button class="hero__button" type="button">Explore More</button>
+          </div>
+        </div>
       </section>
       <section>
         <h2>Less talk and more walk</h2>
