--- a/index.html
+++ b/index.html
@@ -44,15 +44,25 @@
           </div>
         </div>
       </section>
-      <section>
-        <h2>Less talk and more walk</h2>
-        <p>
-          Sometimes our career, lifestyle, or routines can make it difficult to
-          provide your pet with the recommended amount of exercise that they
-          need. Which is why, it’s okay to use an extra hand in walking dogs so
-          they are in perfect shape, mentally and physically.
-        </p>
-        <button type="button">Explore More</button>
+      <section class="Less-talk__section">
+        <div class="container">
+          <div class="Less-talk__container">
+            <div></div>
+            <div class="Less-talk__container-text">
+              <h2 class="Less-talk__title">Less talk and more walk</h2>
+              <p class="Less-talk__text">
+                Sometimes our career, lifestyle, or routines can make it
+                difficult to provide your pet with the recommended amount of
+                exercise that they need. Which is why, it’s okay to use an extra
+                hand in walking dogs so they are in perfect shape, mentally and
+                physically.
+              </p>
+              <button class="Less-talk__button" type="button">
+                Explore More
+              </button>
+            </div>
+          </div>
+        </div>
       </section>
       <section>
         <h2>Services category</h2>
