--- a/index.html
+++ b/index.html
@@ -118,14 +118,18 @@
           <div class="customers__slider">
             <button class="customers__button carousel-button prev">
               <svg class="carousel-arraw" width="16px" height="16px">
-                <use href=""></use>
+                <use href="./img/symbol-defs.svg#icon-Arrow-right"></use>
               </svg>
             </button>
             <div class="customers__container swiper-container">
               <ul class="customers__list swiper-wrapper">
                 <li class="swiper-slider">
                   <article class="customer-card">
-                    <img class="customer-card__img" src="./img/Christin & Tom.jpg" alt="Christin & Tom" />
+                    <img
+                      class="customer-card__img"
+                      src="./img/Christin & Tom.jpg"
+                      alt="Christin & Tom"
+                    />
                     <div class="customer-card__container">
                       <div class="customer-card__container-text">
                         <h3 class="customer-card__title">Christin & Tom</h3>
@@ -139,7 +143,11 @@
                 </li>
                 <li class="swiper-slider">
                   <article class="customer-card">
-                    <img class="customer-card__img" src="./img/Anna & Tobby.jpg" alt="Anna & Tobby" />
+                    <img
+                      class="customer-card__img"
+                      src="./img/Anna & Tobby.jpg"
+                      alt="Anna & Tobby"
+                    />
                     <div class="customer-card__container">
                       <div class="customer-card__container-text">
                         <h3 class="customer-card__title">Anna & Tobby</h3>
@@ -153,7 +161,11 @@
                 </li>
                 <li class="swiper-slider">
                   <article class="customer-card">
-                    <img class="customer-card__img" src="./img/Sindy & Kitch.jpg" alt="Sindy & Kitch" />
+                    <img
+                      class="customer-card__img"
+                      src="./img/Sindy & Kitch.jpg"
+                      alt="Sindy & Kitch"
+                    />
                     <div class="customer-card__container">
                       <div class="customer-card__container-text">
                         <h3 class="customer-card__title">Sindy & Kitch</h3>
@@ -166,7 +178,37 @@
                   </article>
                 </li>
               </ul>
+              <div class="pagination">
+                <button
+                  class="pagination__button"
+                  type="button"
+                  aria-label="Go to slide 1"
+                ></button>
+                <button
+                  class="pagination__button"
+                  type="button"
+                  aria-label="Go to slide 2"
+                ></button>
+                <button
+                  class="pagination__button"
+                  type="button"
+                  aria-label="Go to slide 3"
+                ></button>
+                <button
+                  class="pagination__button"
+                  type="button"
+                  aria-label="Go to slide 4"
+                ></button>
+              </div>
             </div>
+            <button
+              class="customers__button carousel-button next"
+              type="buttom"
+            >
+              <svg class="carousel-arraw" width="16px" height="16px">
+                <use href="./img/symbol-defs.svg#icon-Arrow-right"></use>
+              </svg>
+            </button>
           </div>
         </div>
       </section>
