--- a/index.html
+++ b/index.html
@@ -177,6 +177,42 @@
                     </div>
                   </article>
                 </li>
+                <li class="swiper-slider">
+                  <article class="customer-card">
+                    <img
+                      class="customer-card__img"
+                      src="./img/Sindy & Kitch.jpg"
+                      alt="Sindy & Kitch"
+                    />
+                    <div class="customer-card__container">
+                      <div class="customer-card__container-text">
+                        <h3 class="customer-card__title">Sindy & Kitch</h3>
+                        <p class="customer-card__text">
+                          Great job with the trainer!
+                        </p>
+                      </div>
+                      <div></div>
+                    </div>
+                  </article>
+                </li>
+                <li class="swiper-slider">
+                  <article class="customer-card">
+                    <img
+                      class="customer-card__img"
+                      src="./img/Sindy & Kitch.jpg"
+                      alt="Sindy & Kitch"
+                    />
+                    <div class="customer-card__container">
+                      <div class="customer-card__container-text">
+                        <h3 class="customer-card__title">Sindy & Kitch</h3>
+                        <p class="customer-card__text">
+                          Great job with the trainer!
+                        </p>
+                      </div>
+                      <div></div>
+                    </div>
+                  </article>
+                </li>
               </ul>
               <div class="pagination">
                 <button
@@ -214,7 +250,7 @@
       </section>
     </main>
     <footer></footer>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="./js/slider.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script> -->
+    <!-- <script src="./js/slider.js"></script> -->
   </body>
 </html>
